--- a/lr7/templates/registration/login.html
+++ b/lr7/templates/registration/login.html
@@ -14,7 +14,7 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit">Login</button>
+        <button class="btn btn-success ml-2" type="submit">Login</button>
     </form>
     {% endblock %}
 </body>
