--- a/lr7/templates/article_list.html
+++ b/lr7/templates/article_list.html
@@ -21,7 +21,12 @@
         {{ article.body }}
     </div>
     <div class="card-footer text-center text-muted">
-        <a href="{% url 'article_edit' article.pk %}">Edit</a> | <a href="{% url 'article_delete' article.pk %}">Delete</a>
+        {% for comment in article.comments.all %}
+        <p>
+            <span class="font-weight-bold">{{ comment.author }} &middot</span>
+            {{ comment }}
+        </p>
+        {% endfor %}
     </div>
     {% endfor %}
     {% endblock content %}
